# simple-protocol

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  package-lock.json  package.json
client/: client.js  client.ts  execute.js  package-lock.json  package.json  pubspec.yaml  tsconfig.json
client/.dart_tool/: package_config.json
common/: directory.js
common/client/: execute.js
programs/simple-protocol/: Cargo.toml
programs/simple-protocol/src/: lib.rs
src/: common.rs  entrypoint.rs  error.rs  execute.rs  instruction.rs  instructions.rs  lib.rs  print_shit.rs  print_statements.rs  processor.rs  simple_errors.rs  transfer_simple.rs
src/accounts_init/: mod.rs  percent_tracker.rs  program.rs  tracker.rs  transfer_signer.rs  user.rs  wsol_amount.rs
src/accounts_init/program/: authority.rs  init_prog_accounts.rs  mod.rs  percent_tracker.rs  prog_simple_ata.rs  program_simple_account.rs  transfer_signer.rs  wsol_amount.rs
src/accounts_init/user/: init_user_accounts.rs  mod.rs  user_claim_tracker.rs  user_simple_ata.rs
testing/: package-lock.json  package.json  tsconfig.json
testing/src/: testing.js  testing.ts
tests/: simple-protocol.ts
