[package]
name = "simple-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
solana-program = "1.18.21"
spl-token-2022 = { version="0.7.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "2.0.0", features = [ "no-entrypoint" ] }
thiserror = "1.0.63"
num-derive = "0.4.2"
num-traits = "0.2.19"



[lib]
crate-type = ["cdylib"]
